* jargon-security - code for use with Spring security
* jargon-user-tagging - code for using free tagging and other metadata metaphors on top of iRODS
* jargon-transfer - transfer manager for managing and synchronizing data with iRODS
* jargon-ticket - support for ticket processing
* jargon-httpstream - stream http content into iRODS via Jargon


==Requirements==

*Jargon depends on Java 1.6+
*Jargon is built using Apache Maven2, see POM for dependencies
*Jargon supports iRODS 2.5 through iRODS 3.2

==Libraries==

Jargon-core uses Maven for dependency management.  See the pom.xml file for references to various dependencies.

Note that the following bug and feature requests are logged in GForge with related commit information [[https://code.renci.org/gf/project/jargon/tracker/]]

==Bug Fixes==

*[#1092] add reconnect option to iDrop
**Add irodsAccount info to IRODSCommands during reconnect
**Add new constructor and initializer for IRODSCommands that avoids calling the finalizer on a connection when the IRODSCommands was created in 'stand-alone' mode.  This fixes a bug where
the connection finalizer could be called and the connection closed at an inappropriate time when in connection restart mode
 
*[#1093] Broken pipe error did not propagate in parallel transfer
**Small clean-ups in transfer processing and error call-backs
 
*[#1109] specific query no data found results in exception
**Specific query was returning a DataNotFoundException when no results returned, fixed to return an empty result set
 
*[#1139] Spaces at the begin or end of a data object name will cause an exception
**added trim to DataObjectAO, FileFactory, CollectionAO, and CollectionAndDataObjectListAndSearchAO methods that take a path
 
==Features==

*[#1140] user listing methods not sorted
**Added sorts to user find* methods and switched to builder queries