@@ -1,5 +1,5 @@
 package org.irods.jargon.core.utils;
 public final class JargonVersion {
- public static String VERSION="3.2.1.4-SNAPSHOT";
- public static String BUILD_TIME="20130206-0827";
+ public static String VERSION="3.2.1.5-SNAPSHOT";
+ public static String BUILD_TIME="20130206-1021";
 }
